<resources>
    <string name="app_name">main</string>
    <string name="find">查找商户</string>
    <string name="changsha">长沙</string>
    <string name="laoxiang">老乡会</string>
    <string name="hosthome">同乡异城，互帮互助</string>
    <string name="waimai">外卖汇</string>
    <string name="one_phone">一个电话，马上到家</string>
    <string name="first_page">首页</string>
    <string name="guangchang">明珠广场</string>
    <string name="ktv">东方明珠ktv</string>
    <string name="tea">电影</string>
    <string name="open_time">19:00</string>
    <string name="end_time">01:00</string>
    <string name="details">详情</string>
    <string name="telephone">电话：</string>
    <string name="purple">紫欣</string>
    <string name="ren">联系人：</string>
    <string name="square">明珠广场</string>
    <string name="address">地址：</string>
    <string name="time">营业时间：</string>
    <string name="start">/人起</string>
    <string name="five">500</string>
    <string name="squre">人均：</string>
    <string name="dianhua">电话</string>
    <string name="handup">举报</string>
    <string name="yi">——</string>
    <string name="number">1234567890</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="write_shopName">请输入商户名称</string>
    <string name="beautiful">美食</string>
    <string name="allShop">全部商户</string>
</resources>
