<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <LinearLayout
        android:background="@color/green"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/left_img"
            android:onClick="ThreeOnclick"
            android:clickable="true"
            android:paddingLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/left"/>
        <TextView
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:text="@string/details"/>
        <ImageView
            android:id="@+id/share_img"
            android:onClick="ThreeOnclick"
            android:clickable="true"
            android:paddingRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share"/>
        <ImageView
            android:id="@+id/collect_img"
            android:paddingRight="15dp"
            android:onClick="ThreeOnclick"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/collect"/>
    </LinearLayout>


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <ImageView
    android:id="@+id/iv_ten"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:src="@drawable/ten"/>

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/ktv"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="22dp"
        android:text="@string/ktv"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="@color/gray_one"
            android:text="@string/squre" />
        <TextView
            android:id="@+id/money_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="@color/gray_one"
            android:text="@string/five" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="@color/gray_one"
            android:text="@string/start" />
        <TextView
            android:paddingLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="@color/gray_one"
            android:text="@string/time" />
        <TextView
            android:id="@+id/openTime_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="@color/gray_one"
            android:text="@string/open_time" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="@color/gray_one"
            android:text="-" />
        <TextView
            android:id="@+id/endTime_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="@color/gray_one"
            android:text="@string/end_time" />
    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/address"/>
        <TextView
            android:id="@+id/square"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/square"/>
    </LinearLayout>

    <LinearLayout
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/ren"/>
        <TextView
            android:id="@+id/purple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/purple"/>
    </LinearLayout>


    <LinearLayout
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/telephone"/>
        <TextView
            android:id="@+id/telphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="1234567890"/>
    </LinearLayout>

    <TextView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/gray_one"
        android:text="@string/details"/>

    <TextView
        android:id="@+id/many_text"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:textSize="20dp"
        android:text="@string/details"/>
    </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_weight="1"
            android:padding="5dp"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/phone"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="24dp"
                android:layout_gravity="center_vertical"
                android:text="@string/dianhua"/>
        </LinearLayout>
        <LinearLayout
        android:layout_weight="1"
        android:padding="5dp"
        android:gravity="center_horizontal"
        android:layout_marginLeft="2dp"
        android:background="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/handup"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textSize="24dp"
            android:layout_gravity="center_vertical"
            android:text="@string/handup"/>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>
