<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/listview_item_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <ImageView
        android:id="@+id/listview_item_Img"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:src="@drawable/two"/>
<LinearLayout
    android:layout_marginLeft="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/listview_item_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="@string/ktv"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/listview_item_money"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="500"
        android:textStyle="bold"
        android:textColor="@color/orange"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/img_phone"
        android:layout_weight="1"
        android:paddingLeft="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/phone"/>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:id="@+id/listview_item_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/guangchang" />
            <TextView
                android:layout_weight="1"
                android:id="@+id/item_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/tea" />
            <TextView
                android:layout_weight="1"
                android:id="@+id/open_time"
                android:drawableLeft="@drawable/shizhong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/open_time" />
            <TextView
                android:layout_weight="1"
                android:id="@+id/end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/end_time" />
        </LinearLayout>
     </LinearLayout>
    </LinearLayout>
</LinearLayout>


