<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context="com.example.activity.LunboActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">
        <android.support.v4.view.ViewPager
            android:id="@+id/vp_home_top"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:gravity="center">
        <ImageView
            android:id="@+id/bg_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/index_indicator_selected" />
        <ImageView
            android:id="@+id/bg_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:src="@drawable/index_indicator_no"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:onClick="TwoOnclick"
            android:id="@+id/OldPeople"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <LinearLayout
            android:paddingLeft="8dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/laoxiang"
                android:textSize="18dp"
                android:textColor="@color/blue"/>
            <TextView
                android:paddingTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hosthome"
                android:textSize="12dp" />
        </LinearLayout>
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/waimai"/>
        </LinearLayout>
<!--2-->
        <LinearLayout
            android:onClick="TwoOnclick"
            android:id="@+id/outgoing_food"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:paddingLeft="8dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:paddingTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waimai"
                    android:textSize="18dp"
                    android:textColor="@color/orange"/>
                <TextView
                    android:paddingTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one_phone"
                    android:textSize="12dp" />
            </LinearLayout>
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/two_people"/>
        </LinearLayout>
    </LinearLayout>

    <!--222222222222-->
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="16dp"
    android:padding="5dp"
    android:text="老乡推荐"/>


</LinearLayout>
